Added config and hotkeys

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -2,7 +2,8 @@
     <qresource prefix="/icn">
         <file alias="app_logo.ico">icons/app_logo.ico</file>
         <file alias="app_logo_1024.png">icons/app_logo_1024x1024.png</file>
-        <file alias="Rookception.h5">models/CNN/RookceptionCNN_V1.h5</file>
+        <file alias="menu_settings_icon">icons/menu_settings_icon.svg</file>
+        <file alias="menu_help_icon">icons/menu_help_icon.svg</file>
     </qresource>
     <qresource prefix="/models">
         <file alias="Rookception.h5">models/CNN/RookceptionCNN_V1.h5</file>
